<resources>
    <string name="app_name">FYP_FitLedger</string>
    <string name="display_app_name">Fit Ledger</string>

    <string name="frag_acc_measure_header">Do you want a more accurate body fat calculation?</string>
    <string name="frag_activ_lvl_header">Select Your Activity Level</string>
    <string name="frag_activ_lvl_label">Moderately Active</string>
    <string name="frag_activ_freq_header">Select Your Activity Frequency</string>
    <string name="frag_activ_freq_label">Regularly</string>
    <string name="frag_age_header">Select Your Age</string>
    <string name="frag_age_label">Age: 18</string>
    <string name="frag_body_fat_result_header">Body Fat Percentage (%):</string>
    <string name="frag_body_fat_result_label">0.00</string>
    <string name="frag_body_dens_result_header">Body Density (g/mL):</string>
    <string name="frag_body_dens_result_label">0.000</string>
    <string name="frag_body_metric_bmi_header">Your BMI:</string>
    <string name="frag_body_metric_bmi_label">0.0</string>
    <string name="frag_body_metric_est_body_fat_header">Est Body Fat Percentage:</string>
    <string name="frag_body_metric_est_body_fat_label">0.0%</string>
    <string name="frag_cust_workout_header">Do you want to customize your workout plan?</string>
    <string name="frag_diet_nutri_plan_header_1">We had generate a</string>
    <string name="frag_diet_nutri_plan_header_2">Nutrient Plan</string>
    <string name="frag_diet_nutri_plan_header_3">for you</string>
    <string name="frag_diet_nutri_plan_note_header">Notes: </string>
    <string name="frag_diet_nutri_plan_note_label">Recommended nutrient amounts only\nconsult a professional for personalized advice.</string>
    <string name="frag_diet_plan_header">Do have any Diet Plan?</string>
    <string name="frag_diet_plan_type_header">Select your Diet Plan?</string>
    <string name="frag_diet_plan_type_1_header">Vegetarian</string>
    <string name="frag_diet_plan_type_1_label">Excludes meat, may include dairy and/or eggs</string>
    <string name="frag_diet_plan_type_2_header">DASH</string>
    <string name="frag_diet_plan_type_2_label">Focus fruits, vegetables, low-fat dairy, limits sodium, sugar</string>
    <string name="frag_diet_plan_type_3_header">Low-carb</string>
    <string name="frag_diet_plan_type_3_label">Reduce grains, starches, focus on protein and fat</string>
    <string name="frag_diet_plan_type_4_header">Mediterranean</string>
    <string name="frag_diet_plan_type_4_label">Fruits, vegetables, whole grains, healthy fats, fish</string>
    <string name="frag_diet_plan_type_5_header">Paleo</string>
    <string name="frag_diet_plan_type_5_label">unprocessed foods, excludes grains, legumes, dairy.</string>
    <string name="frag_diet_plan_type_6_header">Keto</string>
    <string name="frag_diet_plan_type_6_label">low-carb, high-fat diet</string>
    <string name="frag_diet_plan_type_7_header">Zone</string>
    <string name="frag_diet_plan_type_7_label">Balance diet, 40% carb, 30% protein, and 30% fat</string>
    <string name="frag_diet_plan_type_8_header">Atkins</string>
    <string name="frag_diet_plan_type_8_label">low carb diet, focus on fat and protein</string>
    <string name="frag_diet_plan_type_9_header">Gluten-free</string>
    <string name="frag_diet_plan_type_9_label">excludes wheat, barley, rye, and foods with gluten</string>
    <string name="frag_diet_plan_type_10_header">Low-fat</string>
    <string name="frag_diet_plan_type_10_label">limit all kinds of fat intake</string>
    <string name="frag_fat_cali_step_1">Prepare a Body Fat Caliper</string>
    <string name="frag_fat_cali_step_2">Relax and stand naturally</string>
    <string name="frag_fat_cali_step_3">Pinch the Chest skin</string>
    <string name="frag_fat_cali_step_3_female">Pinch the Tricep skin</string>
    <string name="frag_fat_cali_step_4">Position the Caliper</string>
    <string name="frag_fat_cali_step_5">Read and record the value</string>
    <string name="frag_fat_cali_step_6">Repeat for Abdomen and Thigh</string>
    <string name="frag_fat_cali_step_6_female">Repeat for Suprailiac &amp; Thigh</string>
    <string name="frag_fat_cali_input_label_1">Chest:</string>
    <string name="frag_fat_cali_input_label_2">Tricep:</string>
    <string name="frag_fat_cali_input_label_3">Abdomen:</string>
    <string name="frag_fat_cali_input_label_4">Suprailiac:</string>
    <string name="frag_fat_cali_input_label_5">Thigh:</string>
    <string name="frag_finish_setup_header_1">You had finish all tbe setup</string>
    <string name="frag_finish_setup_header_2">Enjoy your healthy journey</string>
    <string name="frag_finish_setup_header_3">with</string>
    <string name="frag_finish_setup_header_4">FitLedger</string>
    <string name="frag_fit_goal_header">What is your fitness goal?</string>
    <string name="frag_fit_goal_option_1">Become Healthier</string>
    <string name="frag_fit_goal_option_2">Lose Weight</string>
    <string name="frag_fit_goal_option_3">Lose Fat</string>
    <string name="frag_fit_goal_option_4">Gain Weight</string>
    <string name="frag_fit_goal_option_5">Gain Muscle</string>
    <string name="frag_gender_header">Select Your Gender</string>
    <string name="frag_gender_m">Male</string>
    <string name="frag_gender_f">Female</string>
    <string name="frag_height_header">Select Your Height</string>
    <string name="frag_height_label">170.0 cm</string>
    <string name="frag_weight_header">Select Your Weight</string>
    <string name="frag_weight_label">65.0 kg</string>
    <string name="frag_method_select_header">Choose a method for accurate body fat calculation</string>
    <string name="frag_method_select_option_1">Tape Measure Method</string>
    <string name="frag_method_select_option_2">Fat Caliper Method</string>
    <string name="frag_tape_meas_step_1">Prepare a Tape Measure</string>
    <string name="frag_tape_meas_step_2">Wrap it around your neck</string>
    <string name="frag_tape_meas_step_3">Exhale, relax your muscle</string>
    <string name="frag_tape_meas_step_4">Read and record the value</string>
    <string name="frag_tape_meas_step_5">Repeat for Abdomen</string>
    <string name="frag_tape_meas_step_5_female">Repeat for waist &amp; hips</string>
    <string name="frag_tape_meas_input_label_1">Neck:</string>
    <string name="frag_tape_meas_input_label_2">Waist:</string>
    <string name="frag_tape_meas_input_label_3">Hips:</string>
    <string name="frag_target_body_fat_header">What is your target body fat percentage?</string>
    <string name="frag_target_body_fat_label">00.0</string>
    <string name="frag_target_muscle_header">Select Target Muscle Groups</string>
    <string name="frag_target_weight_header">What is your target weight?</string>
    <string name="frag_target_weight_label">65.0 kg</string>
    <string name="frag_workout_day_header">Select Your Prefer Workout Days</string>
    <string name="frag_workout_plan_header">Workout Plan</string>
    <string name="frag_workout_time_header">Select Your Prefer Workout Duration</string>
    <string name="frag_workout_time_label">1 Hour</string>


    <string name="frag_btn_next">Next</string>
    <string name="frag_btn_cont">Continue</string>
    <string name="frag_btn_yes">Yes</string>
    <string name="frag_btn_no">No</string>
    <string name="frag_btn_nexttime">Maybe Next Time</string>
    <string name="frag_btn_calc">Calculate</string>
    <string name="frag_btn_get_start">Get Started</string>
    <string name="frag_btn_generate_workout">Generate Workout Plan</string>
</resources>
