<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:app2="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/fragment_bg_0">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_fit_goal_header"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:paddingBottom="35dp"
        android:layout_marginBottom="16dp"
        android:textColor="@color/off_white"
        android:shadowRadius="5"
        android:shadowColor="@color/gray"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnBecomeHealthier"
            style="@style/SelectableButton"
            android:text="@string/frag_fit_goal_option_1"/>

        <Button
            android:id="@+id/btnLoseWeight"
            style="@style/SelectableButton"
            android:text="@string/frag_fit_goal_option_2"/>

        <Button
            android:id="@+id/btnLoseFat"
            style="@style/SelectableButton"
            android:text="@string/frag_fit_goal_option_3"/>

        <Button
            android:id="@+id/btnGainWeight"
            style="@style/SelectableButton"
            android:text="@string/frag_fit_goal_option_4"/>

        <Button
            android:id="@+id/btnGainMuscle"
            style="@style/SelectableButton"
            android:text="@string/frag_fit_goal_option_5"/>
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag_btn_next"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"
        app:backgroundTint="@color/button_color"
        android:enabled="false"/>
</LinearLayout>
