<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/fragment_bg_270">

    <TextView
        android:text="@string/frag_diet_nutri_plan_header_1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/off_white"/>
    <TextView
        android:text="@string/frag_diet_nutri_plan_header_2"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:shadowColor="@color/black"/>
    <TextView
        android:text="@string/frag_diet_nutri_plan_header_3"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:textColor="@color/off_white"/>

    <TextView
        android:text="@string/frag_diet_nutri_plan_note_header"
        android:textSize="15sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/off_white"/>

    <TextView
        android:text="@string/frag_diet_nutri_plan_note_label"
        android:textSize="12sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/off_white"/>

    <Button
        android:id="@+id/btContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_btn_cont"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/button_color"/>

</LinearLayout>