<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/fragment_bg_135">

    <TextView
        android:id="@+id/tvBMI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_body_metric_bmi_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/off_white" />

    <TextView
        android:id="@+id/tvBMIValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_body_metric_bmi_label"
        android:textColor="@color/grayish_lime_green"
        android:textSize="50sp"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:shadowColor="@color/gray" />

    <TextView
        android:id="@+id/tvBodyFat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_body_metric_est_body_fat_header"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/off_white" />

    <TextView
        android:id="@+id/tvBodyFatValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_body_metric_est_body_fat_label"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/grayish_lime_green"
        android:layout_marginBottom="20dp"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="2"
        android:shadowColor="@color/gray" />

    <Button
        android:id="@+id/btnNext"
        android:text="@string/frag_btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:backgroundTint="@color/button_color"
        android:enabled="false"/>

</LinearLayout>
