<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="20dp"
    android:background="@drawable/fragment_bg_45">

    <TextView
        android:id="@+id/tvChooseMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_method_select_header"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:paddingBottom="35dp"
        android:textColor="@color/off_white"
        android:shadowRadius="2"
        android:shadowColor="@color/gray" />

    <Button
        android:id="@+id/btnTapeMeasure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag_method_select_option_1"
        android:padding="10dp"
        app:backgroundTint="@color/button_color"/>

    <Button
        android:id="@+id/btnFatCaliper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/frag_method_select_option_2"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:backgroundTint="@color/button_color"/>
</LinearLayout>
