<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/fragment_bg_225">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_activ_lvl_header"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/off_white"
        android:textStyle="bold"
        android:shadowRadius="2"
        android:shadowColor="@color/gray"/>

    <ImageView
        android:id="@+id/alIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_al_3"
        app:tint="@color/light_grey"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_activity_level"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="1"
        android:valueTo="5"
        android:stepSize="1"
        android:value="3"
        app:labelBehavior="gone"
        app:trackColorActive="@color/grayish_lime_green"
        app:trackColorInactive="@color/soft_gray"
        app:thumbColor="@color/grayish_lime_green"
        app:haloColor="@color/light_grayish_cyan"/>

    <TextView
        android:id="@+id/tv_activity_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_activ_lvl_label"
        android:textSize="18sp"
        android:textColor="@color/light_grey"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_activ_freq_header"
        android:textSize="22sp"
        android:textAlignment="center"
        android:textColor="@color/off_white"
        android:textStyle="bold"
        android:shadowRadius="2"
        android:shadowColor="@color/gray"/>

    <ImageView
        android:id="@+id/afIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_af_3"
        app:tint="@color/light_grey"/>

    <com.google.android.material.slider.Slider
        android:id="@+id/slider_activity_frequency"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="1"
        android:valueTo="5"
        android:stepSize="1"
        android:value="3"
        app:labelBehavior="gone"
        app:trackColorActive="@color/grayish_lime_green"
        app:trackColorInactive="@color/soft_gray"
        app:thumbColor="@color/grayish_lime_green"
        app:haloColor="@color/light_grayish_cyan"/>

    <TextView
        android:id="@+id/tv_activity_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_activ_freq_label"
        android:textSize="16sp"
        android:textColor="@color/light_grey"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_btn_next"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/button_color"/>
</LinearLayout>
