<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="16dp"
    android:background="@drawable/fragment_bg_90">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_workout_time_header"
        android:textSize="35sp"
        android:textAlignment="center"
        android:textColor="@color/off_white"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        android:shadowRadius="2"
        android:shadowColor="@color/gray"/>

    <ImageView
        android:id="@+id/timeIcon"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_time_2"
        app:tint="@color/light_grey"/>


    <com.google.android.material.slider.Slider
        android:id="@+id/slider_workout_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:valueFrom="30"
        android:valueTo="135"
        android:stepSize="15"
        android:value="60"
        app:labelBehavior="gone"
        app:trackColorActive="@color/grayish_lime_green"
        app:trackColorInactive="@color/soft_gray"
        app:thumbColor="@color/grayish_lime_green"
        app:haloColor="@color/light_grayish_cyan"/>

    <TextView
        android:id="@+id/tv_workout_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_workout_time_label"
        android:textSize="22sp"
        android:textStyle="bold"
        android:textColor="@color/light_grey"
        android:gravity="center"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_btn_generate_workout"
        android:layout_marginTop="24dp"
        app:backgroundTint="@color/button_color"/>
</LinearLayout>