<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="30dp"
    android:background="@drawable/fragment_bg_0">

    <ImageView
        android:id="@+id/ivFatCaliper"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/caliper_fat" />

    <LinearLayout
        android:id="@+id/stepsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:id="@+id/step1Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/step1Circle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="1"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/step1Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frag_fat_cali_step_1"
                android:layout_gravity="center_vertical"
                android:textColor="@color/off_white"
                android:textSize="20sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/step2Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/step2Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frag_fat_cali_step_2"
                android:layout_gravity="center_vertical"
                android:textColor="@color/off_white"
                android:textSize="20sp"
                android:gravity="end"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/step2Circle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="2"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/step3Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/step3Circle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="3"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/step3Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frag_fat_cali_step_3"
                android:layout_gravity="center_vertical"
                android:textColor="@color/off_white"
                android:textSize="20sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/step4Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/step4Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frag_fat_cali_step_4"
                android:layout_gravity="center_vertical"
                android:textColor="@color/off_white"
                android:textSize="20sp"
                android:gravity="end"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/step4Circle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="4"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/step5Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/step5Circle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="5"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/step5Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frag_fat_cali_step_5"
                android:layout_gravity="center_vertical"
                android:textColor="@color/off_white"
                android:textSize="20sp"
                android:layout_marginStart="8dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/step6Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/step6Text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/frag_fat_cali_step_6"
                android:layout_gravity="center_vertical"
                android:textColor="@color/off_white"
                android:textSize="20sp"
                android:gravity="end"
                android:layout_marginEnd="8dp"/>

            <TextView
                android:id="@+id/step6Circle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:textStyle="bold"
                android:background="@drawable/circle_background"
                android:gravity="center"
                android:text="6"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag_btn_cont"
        android:padding="10dp"
        android:paddingStart="35dp"
        android:paddingEnd="35dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        app:backgroundTint="@color/button_color"/>
</LinearLayout>
